# SanFall

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.6DD06FD0F410DA44.idx
src/: main  main.cpp
